jvm,思维导图,杂项等笔记整理